Spell "Windows" as "Windows", not "Win"
This makes the labels more clear using the canonical name, and avoids
any confusion with the English word "win".

--- a/data/geany.glade
+++ b/data/geany.glade
@@ -7706,7 +7706,7 @@
                                   <object class="GtkRadioMenuItem" id="crlf">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="label" translatable="yes">Convert and Set to _CR/LF (Win)</property>
+                                    <property name="label" translatable="yes">Convert and Set to _CR/LF (Windows)</property>
                                     <property name="use_underline">True</property>
                                     <signal name="activate" handler="on_crlf_activate" swapped="no"/>
                                   </object>
