Make the editor tab close buttons smaller on GTK3
Also remove extra padding around the button's image to reduce its size
and try and avoid it expanding the tab's height.

This at least fixes the editor tabs height on Adwaita theme, where they
were 1px taller than normal.

--- a/data/geany.css
+++ b/data/geany.css
@@ -9,6 +9,9 @@
 	-GtkButton-inner-border: 0;
 	padding: 0;
 }
+#geany-close-tab-button GtkImage {
+	padding: 0;
+}
 
 /* use monospaced font in search entries for easier reading of regexp (#1907117) */
 #GeanyDialogSearch GtkEntry {
