Make more explicit that the file pattern list can be used by plugins too

--- a/data/geany.glade
+++ b/data/geany.glade
@@ -8513,7 +8513,7 @@
                   <object class="GtkEntry" id="entry_project_dialog_file_patterns">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="tooltip_text" translatable="yes">Space separated list of file patterns used for the find in files dialog (e.g. *.c *.h)</property>
+                    <property name="tooltip_text" translatable="yes">Space separated list of file patterns used by the find in files dialog and plugins (e.g. *.c *.h)</property>
                     <property name="invisible_char">•</property>
                     <property name="primary_icon_activatable">False</property>
                     <property name="secondary_icon_activatable">True</property>
