Separate project and project-session files
The project file should contain only user-independent settings
so it can be put e.g. to VCS and shared among several developers.
On the other hand, the session file contains things like open
files, VTE directory but also all the project settings from
plugins (because it is not guaranteed that all developers
have the given plugin enabled).

--- a/data/geany.glade
+++ b/data/geany.glade
@@ -1429,7 +1429,7 @@
                                 <property name="can_focus">False</property>
                                 <child>
                                   <object class="GtkCheckButton" id="check_project_session">
-                                    <property name="label" translatable="yes">Use project-based session files</property>
+                                    <property name="label" translatable="yes">Use per-project session files</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">False</property>
