--- a/data/geany.css
+++ b/data/geany.css
@@ -37,3 +37,8 @@
 #geany-document-status-readonly {
 	color: #007f00;
 }
+
+/* red "Terminal" label when terminal dirty */
+#geany-terminal-dirty {
+	color: #ff0000;
+}
