--- a/data/geany.glade
+++ b/data/geany.glade
@@ -8327,7 +8327,7 @@
                 </child>
               </object>
               <packing>
-                <property name="resize">True</property>
+                <property name="resize">False</property>
                 <property name="shrink">True</property>
               </packing>
             </child>
