Strip spurious backslashes in an UI string

--- a/data/geany.glade
+++ b/data/geany.glade
@@ -6019,7 +6019,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
-                                <property name="tooltip_text" translatable="yes">Whether to execute \"cd $path\" when you switch between opened files</property>
+                                <property name="tooltip_text" translatable="yes">Whether to execute "cd $path" when you switch between opened files</property>
                                 <property name="draw_indicator">True</property>
                               </object>
                               <packing>
