--- a/data/geany-3.20.css
+++ b/data/geany-3.20.css
@@ -4,5 +4,8 @@
 #geany-close-tab-button {
 	outline-offset: 0;
 	outline-width: 0;
-	border: 0;
+	margin: 0;
+	margin-left: 0.5em;
+	min-width: 0;
+	min-height: 0;
 }
